Révision du process d'inscription: Module de paiement revu

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=Siabanni
 DB_USERNAME=root
-DB_PASSWORD=phreakerSmart[]{}
+DB_PASSWORD=phreaker01SmartHARY&M
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -26,10 +26,9 @@ REDIS_PORT=6379
 MAIL_DRIVER=sparkpost
 MAIL_HOST=smtp.sparkpostmail.com
 MAIL_PORT=587
-MAIL_USERNAME=yassrhadj@gmail.com
-MAIL_PASSWORD=azerty1234567890é
-MAIL_ENCRYPTION=tls
-SPARKPOST_SECRET=5d9a96d3a582f305841b715962309314d1b246a7
+MAIL_ENCRYPTION=STARTTLS
+MAIL_USERNAME=SMTP_Injection
+SPARKPOST_SECRET=5b1a188a1232c18307cc7db93537add73c186f84
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -39,5 +38,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-STRIPE_KEY=pk_test_VcwIJwlV6IKF1MblR4UOzBy1
-STRIPE_SECRET=sk_test_dth90JunFLNI2ygaTDXmRKxS
+STRIPE_KEY=pk_test_9K6GNyw99espIZMejs9z6dwl
+STRIPE_SECRET=sk_test_uEatoVltcIXQgUVmQ8P3JEuv
