--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/cashier": "^8.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.7"
+        "laravelcollective/html": "^5.7",
+        "stripe/stripe-php": "^6.30"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
