--- a/.env
+++ b/.env
@@ -23,6 +23,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+MAIL_FROM_ADDRESS= siabanni.webapp@courssiabanni.org
+MAIL_FROM_NAME= "Siabanni Dashboard"
 MAIL_DRIVER=sparkpost
 MAIL_HOST=smtp.sparkpostmail.com
 MAIL_PORT=587
